--- a/src/test/resources/production.properties
+++ b/src/test/resources/production.properties
@@ -1,2 +1,6 @@
 duration=5000
 browser=chrome
+loginUrl=https://you.sharecare.com
+trackerUser=ikprdus7@scqa.me
+feedUser=ikprdus@scqa.me
+invalidUser=jsdhkhdsf@scqa.me
